env-add : docker-compose.yml 파일 수정  - front_url 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       DOCKER_USERNAME: ${DOCKER_USERNAME}
       DOCKER_PASSWORD: ${DOCKER_PASSWORD}
       DB_ENDPOINT: ${DB_ENDPOINT}
+      FRONT_URL: ${FRONT_URL}
       DB_NAME: ${DB_NAME}
       DB_PASSWORD: ${DB_PASSWORD}
     restart: always  # 컨테이너가 중단되었을 때 재시작 설정
