--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,3 +38,7 @@ logging:
     spring.thymeleaf.check-template-location: false
     org.hibernate.type: INFO
 
+slack:
+  webhook:
+    url: ${SLACK_WEBHOOK_URL}
+
