--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -20,10 +20,7 @@ jobs:
         with:
           payload: |
             {
-              "text": "🚀 Pull Request *#${{ github.event.pull_request.number }}* has been merged into *dev* branch! \n\n
-                        <${{ github.event.pull_request.html_url }}|pr로 이동> \n
-                        ${{ github.event.pull_request.body }}
-                      ",
+              "text": "🚀 Pull Request *#${{ github.event.pull_request.number }}* has been merged into *dev* branch!\n<${{ github.event.pull_request.html_url }}|pr로 이동>\n\n${{ toJson(github.event.pull_request.body) }}",
               "attachments": [
                 {
                   "title": "PR Details",
