--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -20,12 +20,19 @@ jobs:
         with:
           payload: |
             {
-              "text": "🚀 Pull Request *#${{ github.event.pull_request.number }}* has been merged into *dev* branch!\n<${{ github.event.pull_request.html_url }}|pr로 이동>\n\n${{ toJson(github.event.pull_request.body) }}",
+              "text": "🚀 Pull Request *#${{ github.event.pull_request.number }}* has been merged into *dev* branch!",
               "attachments": [
                 {
-                  "title": "PR Details",
-                  "title_link": "${{ github.event.pull_request.html_url }}",
-                  "text": ${{ toJson(github.event.pull_request.body) }}
+                   "fallback":"pr url: ${{ github.event.pull_request.html_url }}",
+                   "pretext":"pr url: ${{ github.event.pull_request.html_url }}",
+                   "color":"#D00000",
+                   "fields":[
+                      {
+                         "title":"PR",
+                         "value":"${{ github.event.pull_request.body }}",
+                         "short":false
+                      }
+                   ]
                 }
               ]
             }
