--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -29,7 +29,7 @@ jobs:
                    "fields":[
                       {
                          "title":"PR",
-                         "value":"${{ github.event.pull_request.body }}",
+                         "value":"${{ toJson(github.event.pull_request.body) }}",
                          "short":false
                       }
                    ]
