--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -2,12 +2,11 @@ name: Notify Slack on PR Closed for Dev Branch
 
 on:
   pull_request:
-    types:
-      - closed
+    types: [opened, reopened]
 
 jobs:
   notify-slack:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'dev'
+    if: github.event.pull_request.base.ref == 'dev'
     runs-on: ubuntu-latest
     steps:
       - name: Debug PR URL and Body
