--- a/.github/workflows/pr-merged.yml
+++ b/.github/workflows/pr-merged.yml
@@ -1,8 +1,10 @@
 name: Notify Slack on PR Closed for Dev Branch
 
 on:
-  pull_request:
-    types: [opened, reopened]
+  pull_request_target:
+    types:
+      - opened
+      - reopened
 
 jobs:
   notify-slack:
