feat: 파일 업로드 Presigned URL 생성 API 작업

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,19 @@ services:
       DB_NAME: ${DB_NAME}
       DB_PASSWORD: ${DB_PASSWORD}
     restart: always  # 컨테이너가 중단되었을 때 재시작 설정
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    environment:
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+    ports:
+      - "9000:9000"  # 로컬에서 9000 포트로 접근 가능
+    volumes:
+      - minio_data:/data  # 데이터 저장소
+    command: server /data
+
+volumes:
+  minio_data:
+    driver: local
