feat: 파일 업로드 Presigned URL 생성 API (dev용) (#89)
* feat: 파일 업로드 Presigned URL 생성 API 작업

* fix: docker-compose 오타 수정

* chore: presignedURL 생성 API response 응답값 추가

* chore: 서비스 코드 equals로 수정

* chore: 파일업로드 controller RequestMapping 추가

* chore: docker-compose 수정 및 config 값 주입 경로 수정

* chore: docker-compose restart 추가

* feat: 게시글 작성, 수정, 조회 수정

* Update S3ConfigLocal.java

* Revert "feat: 게시글 작성, 수정, 조회 수정"

This reverts commit a63a0e0acce009c226c7ad201f73dcc10b89eee8.

* chore: try-catch 추가, 응답값에 저장 url 반환으로 수정, Enum 파일명 수정

* chore: 정적 메서드로 수정

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,14 @@ dependencies {
 
     // Swagger
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
+
+    // Minio
+    implementation 'io.minio:minio:8.5.11'
+
+    // S3
+    implementation(platform("software.amazon.awssdk:bom:2.21.1"))
+    implementation("software.amazon.awssdk:s3")
+
 }
 
 tasks.named('test') {
