--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,43 +28,42 @@ services:
       DB_NAME: ${DB_NAME}
       DB_PASSWORD: ${DB_PASSWORD}
       SLACK_WEBHOOK_URL: ${SLACK_WEBHOOK_URL}
+      MINIO_URL: ${MINIO_URL}
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      MINIO_REGION: ${MINIO_REGION}
+      MINIO_BUCKET: ${MINIO_BUCKET}
     restart: always
-    
-#  zookeeper:
-#    image: confluentinc/cp-zookeeper:latest
-#    container_name: zookeeper
-#    environment:
-#      ZOOKEEPER_CLIENT_PORT: 2181
-#    ports:
-#      - "2181:2181"
-#    restart: always
-#
-#  kafka:
-#    image: confluentinc/cp-kafka:latest
-#    container_name: kafka
-#    ports:
-#      - "9092:9092"
-#    environment:
-#      KAFKA_BROKER_ID: 1
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_HEAP_OPTS: "-Xms256M -Xmx512M"
-#    depends_on:
-#      - zookeeper
-#    restart: always
+
+  #  zookeeper:
+  #    image: confluentinc/cp-zookeeper:latest
+  #    container_name: zookeeper
+  #    environment:
+  #      ZOOKEEPER_CLIENT_PORT: 2181
+  #    ports:
+  #      - "2181:2181"
+  #    restart: always
+  #
+  #  kafka:
+  #    image: confluentinc/cp-kafka:latest
+  #    container_name: kafka
+  #    ports:
+  #      - "9092:9092"
+  #    environment:
+  #      KAFKA_BROKER_ID: 1
+  #      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  #      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+  #      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+  #      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+  #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  #      KAFKA_HEAP_OPTS: "-Xms256M -Xmx512M"
+  #    depends_on:
+  #      - zookeeper
+  #    restart: always
 
   minio:
     image: minio/minio:latest
     container_name: minio
-    environment:
-      MINIO_URL: ${MINIO_URL}
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-      MINIO_REGION: ${MINIO_REGION}
-      MINIO_BUCKET: ${MINIO_BUCKET}
     ports:
       - "9000:9000"
     volumes:
