chore: 테스트 컨테이너 상속

--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,12 @@ dependencies {
     implementation(platform("software.amazon.awssdk:bom:2.21.1"))
     implementation("software.amazon.awssdk:s3")
 
+    // testContainer
+    testImplementation 'org.testcontainers:testcontainers:1.18.3'
+    testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
+    testImplementation 'org.testcontainers:mysql:1.19.0'
+    testImplementation 'org.testcontainers:minio:1.19.7'
+
 }
 
 tasks.named('test') {
