--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -2,8 +2,8 @@ name: ✋ Test
 
 on:
   pull_request:
-    types: [ opened, reopened, synchronize ]
-    branches: [ "main", "dev" ]
+    types: [opened, reopened, synchronize]
+    branches: ["main", "dev"]
 
 permissions:
   contents: read
@@ -13,11 +13,27 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
+
+      - name: Gradle 캐시 설정
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: gradlew 실행 권한 설정
+        run: chmod +x gradlew
 
       - name: 테스트 진행
         run: ./gradlew test --parallel
