--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -109,3 +109,8 @@ minio:
   secret-key: test
   region: test
   bucket: test
+
+playhive:
+  control:
+    aesSecretKey: testestetsetstestetsetstetsetstestetsetetses
+    aesIv: tesetstestetsetstetstste
