chore: 테스트 코드 관련 수정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -104,7 +104,7 @@ slack:
     url: test
 
 minio:
-  url: test
+  url: http://localhost:9000
   access-key: test
   secret-key: test
   region: test
