--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,7 @@
 spring:
+  jackson:
+    time-zone: Asia/Seoul
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${DB_ENDPOINT}:3306/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul
@@ -13,6 +16,8 @@ spring:
         format_sql: false
         use_sql_comments: false
         default_batch_fetch_size: 1000 #최적화 옵션
+        jdbc:
+          time_zone: Asia/Seoul
     hibernate:
       ddl-auto: none
       #  create	기존테이블을 삭제하고 다시 생성
