--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       MINIO_BUCKET: ${MINIO_BUCKET}
       AES_SECRET_KEY: ${AES_SECRET_KEY}
       AES_IV: ${AES_IV}
+      TZ=Asia/Seoul
     restart: always
 
   #  zookeeper:
