feat: 파일 업로드 AWS S3로 연결

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -57,6 +57,12 @@ minio:
   region: ${MINIO_REGION}
   bucket: ${MINIO_BUCKET}
 
+aws:
+  access-key: ${AWS_ACCESS_KEY}
+  secret-key: ${AWS_SECRET_KEY}
+  region: ${AWS_REGION}
+  bucket: ${AWS_BUCKET}
+
 playhive:
   control:
     aesSecretKey: ${AES_SECRET_KEY}
