chore: active 변경시 minIO S3, AWS S3 개발용 운영용으로 사용하도록 수정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,6 +2,7 @@ spring:
   jackson:
     time-zone: Asia/Seoul
 
+  # TODO :: 운영 DB로 바꾸기
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${DB_ENDPOINT}:3306/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul
@@ -50,12 +51,12 @@ slack:
   webhook:
     url: ${SLACK_WEBHOOK_URL}
 
-minio:
-  url: ${MINIO_URL}
-  access-key: ${MINIO_ACCESS_KEY}
-  secret-key: ${MINIO_SECRET_KEY}
-  region: ${MINIO_REGION}
-  bucket: ${MINIO_BUCKET}
+aws:
+  access-key: ${AWS_ACCESS_KEY}
+  secret-key: ${AWS_SECRET_KEY}
+  region: ${AWS_REGION}
+  bucket: ${AWS_BUCKET}
+  url: ${AWS_URL}
 
 playhive:
   control:
