--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
     testImplementation 'org.testcontainers:mysql:1.19.0'
     testImplementation 'org.testcontainers:minio:1.19.7'
+    testImplementation 'org.testcontainers:redis:1.19.3'
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
