--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,7 @@ services:
 
   redis:
     image: redis:latest
-    container_name: redis-server
+    container_name: ${REDIS_HOST}
     restart: always
     ports:
       - "6379:6379"
