--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,9 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    //openfeign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
 }
 
 tasks.named('test') {
