feat: google api key 환경변수 추가

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -130,3 +130,9 @@ app:
     url:
       dev: http://localhost:3000
       prod: https://your-production-domain.com
+
+google:
+  api:
+    name: googleApi
+    url: https://www.googleapis.com
+    apiKey: test
