--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -61,3 +61,9 @@ playhive:
   control:
     aesSecretKey: ${AES_SECRET_KEY}
     aesIv: ${AES_IV}
+
+google:
+  api:
+    name: googleApi
+    url: https://www.googleapis.com
+    apiKey: ${GOOGLE_API_KEY}
