--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          ref: dev  # 명확하게 dev 브랜치 지정
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
