--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/play-hive:latest .
+          docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/play-hive:latest .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
