--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,8 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // Redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
 
     //openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
