--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,7 +1,6 @@
 spring:
   datasource:
     url: jdbc:h2:mem:~/playhive;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#    url: jdbc:h2:tcp://localhost/~/spring-study
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -101,6 +100,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+      password: test
 
 
 SENDER_EMAIL: test@test.com
