--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -44,16 +44,18 @@ jobs:
         with:
           report_paths: 'build/test-results/test/TEST-*.xml'
 
-      - name: SonarCloud 분석 실행
+      - name: SonarCloud 스캐너 환경 설정
         uses: SonarSource/sonarcloud-github-action@master
         with:
           projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_SCANNER_OPTS: -Xmx512m
+
+      - name: SonarCloud 분석 실행
         run: |
           ./gradlew sonar \
             -Dsonar.projectKey=your_project_key \
             -Dsonar.organization=your_org \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_SCANNER_OPTS: -Xmx512m
