--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-    finalizedBy jacocoTestReport // Generates report after tests are run
+//    finalizedBy jacocoTestReport // Generates report after tests are run
+    finalizedBy tasks.named('jacocoTestReport')
 }
 
 /**
