--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,7 @@ jacocoTestReport {
                     '**/aop/**',
                     '**/exception/**',
                     '**/config/**',
+                    "**/chat/**",
                     '**/MemberRole*'
             ] + Qdomains)
         }))
