test: mail 테스트코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,9 @@ jacocoTestReport {
                     '**/aop/**',
                     '**/exception/**',
                     '**/config/**',
+                    "**/core/**",
+                    "**/factory/**",
+                    "**strategy/**",
                     "**/chat/**",
                     '**/MemberRole*'
             ] + Qdomains)
