test: member 테스트 코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,8 @@ jacocoTestReport {
                     "**/global/**",
                     "**/oauth2/**",
                     "**/chat/**",
-                    '**/MemberRole*'
+                    '**/MemberRole*',
+                    '**/SecurityReadService*'
             ] + Qdomains)
         }))
     }
@@ -217,7 +218,8 @@ jacocoTestCoverageVerification {
                     "**/global/**",
                     "**/oauth2/**",
                     "**/chat/**",
-                    '**/MemberRole*'
+                    '**/MemberRole*',
+                    '**/SecurityReadService*'
             ] + Qdomains
         }
     }
