--- a/build.gradle
+++ b/build.gradle
@@ -114,8 +114,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     ignoreFailures = true
-    finalizedBy jacocoTestReport // Generates report after tests are run
-//    finalizedBy tasks.named('jacocoTestReport')
+//    finalizedBy jacocoTestReport // Generates report after tests are run
+    finalizedBy tasks.named('jacocoTestReport')
 }
 
 /**
