--- a/src/main/resources/application-auth.yml
+++ b/src/main/resources/application-auth.yml
@@ -141,6 +141,11 @@ spring:
               - phone_number
             redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
         provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&prompt=none
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
+            user-name-attribute: sub
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
