--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   app:
-    image: ${DOCKER_USERNAME}/play-hive:latest # 사용할 이미지 이름
+    image: ${DOCKER_USERNAME}/prod:latest # 사용할 이미지 이름
     build:
       context: . # Dockerfile이 위치한 디렉토리
       dockerfile: Dockerfile # 빌드에 사용할 Dockerfile
