--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -30,8 +30,8 @@ jobs:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: ./docker-compose.yml
-          target: ~/play-hive/
+          source: ./docker-compose-prod.yml
+          target: ~/play-hive/docker-compose.yml
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
