--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -24,14 +24,14 @@ jobs:
       - name: List Files in Current Directory
         run: ls -la
 
-      - name: Copy docker-compose-prod.yml to EC2
+      - name: Copy docker-compose.yml to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: ./docker-compose-prod.yml
-          target: ~/play-hive/docker-compose.yml
+          source: ./docker-compose.yml
+          target: ~/play-hive/
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
