--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -32,14 +32,16 @@ jobs:
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
           source: ./docker-compose.yml
           target: ~/play-hive/
-        
+
       - name: Copy Monitoring Files to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: ./monitoring/
+          source: |
+            monitoring/docker-compose.monitoring.yml,
+            monitoring/prometheus.yml
           target: ~/play-hive/monitoring/
 
       - name: Grant execute permission for gradlew
