--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -33,16 +33,23 @@ jobs:
           source: ./docker-compose.yml
           target: ~/play-hive/
 
-      - name: Copy Monitoring Files to EC2
+      - name: Copy Monitoring Files to EC2 (monitoring)
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: |
-            monitoring/docker-compose.monitoring.yml,
-            monitoring/prometheus.yml
-          target: ~/play-hive/monitoring/
+          source: monitoring/docker-compose.monitoring.yml
+          target: ~/play-hive/monitoring/docker-compose.monitoring.yml
+
+      - name: Copy Prometheus Config
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.PROD_AWS_SERVER_IP }}
+          username: ${{ secrets.AWS_USERNAME }}
+          key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
+          source: monitoring/prometheus.yml
+          target: ~/play-hive/monitoring/prometheus.yml
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
