--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -39,8 +39,8 @@ jobs:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: monitoring/docker-compose.monitoring.yml
-          target: ~/play-hive/monitoring/docker-compose.monitoring.yml
+          source: ./monitoring/docker-compose.monitoring.yml
+          target: ~/play-hive/monitoring/
 
       - name: Copy Prometheus Config
         uses: appleboy/scp-action@v0.1.4
@@ -48,8 +48,8 @@ jobs:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: monitoring/prometheus.yml
-          target: ~/play-hive/monitoring/prometheus.yml
+          source: ./monitoring/prometheus.yml
+          target: ~/play-hive/monitoring/
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
