--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
           source: monitoring/docker-compose.monitoring.yml
-          target: ~/play-hive/monitoring/docker-compose.monitoring.yml
+          target: ~/play-hive/monitoring/
 
       - name: Copy Prometheus Config
         uses: appleboy/scp-action@v0.1.4
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
           source: monitoring/prometheus.yml
-          target: ~/play-hive/monitoring/prometheus.yml
+          target: ~/play-hive/monitoring/
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
