--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -176,6 +176,6 @@ jobs:
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
           script: |
-            cd ~/play-hive/monitoring
+            cd ~/play-hive/monitoring/monitoring
             echo "Launching Prometheus & Grafana containers..."
             docker-compose -f docker-compose.monitoring.yml up -d
