--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -39,9 +39,17 @@ jobs:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          source: ./monitoring/
+          source: monitoring/docker-compose.monitoring.yml
           target: ~/play-hive/monitoring/
-          strip_components: 1
+
+      - name: Copy Prometheus Config
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.PROD_AWS_SERVER_IP }}
+          username: ${{ secrets.AWS_USERNAME }}
+          key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
+          source: monitoring/prometheus.yml
+          target: ~/play-hive/monitoring/
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -176,6 +184,6 @@ jobs:
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
           script: |
-            cd ~/play-hive/monitoring/monitoring
+            cd ~/play-hive/monitoring/
             echo "Launching Prometheus & Grafana containers..."
             docker-compose -f docker-compose.monitoring.yml up -d
